tdf#120736: For Calc shared documents also check the original document URL

...as instead of the original shared document, a temporary copy (with a file URL
denoting a temporary directory, like <file:///tmp/lulmhoxl.tmp/0.ods>) is opened
in that case.

Change-Id: I415f5a0ec44ee06f7ca98495f0e8f032ba93e05c
Reviewed-on: https://gerrit.libreoffice.org/68391
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>